# Engine-

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
assets/shaders/: Cube.slang  GBuffer.slang  Lighting.slang  Mesh.slang  Shadow.slang  Tonemap.slang  Triangle.slang
cmake/: assets.cmake  dependencies.cmake
engine/: CMakeLists.txt
engine/App/: Application.cpp  Application.hpp  Config.hpp  DebugOverlay.cpp  DebugOverlay.hpp  FlyCamera.cpp  FlyCamera.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
engine/Asset/: GeometryPool.cpp  GeometryPool.hpp  Library.cpp  Library.hpp  Vertex.hpp
engine/Core/: Math.hpp
engine/Core/FileWatcher/: FileWatcherWindows.cpp
engine/GPU/: BindlessRegistry.cpp  BindlessRegistry.hpp  FrameContext.cpp  FrameUniforms.cpp  FrameUniforms.hpp  GpuProfiler.cpp  GpuProfiler.hpp  PipelineFactory.cpp  PipelineFactory.hpp  Swapchain.cpp  Swapchain.hpp  UploadContext.cpp  UploadContext.hpp  VulkanContext.cpp
engine/Platform/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
engine/RenderGraph/: CmdRecorder.cpp  CmdRecorder.hpp  RenderGraph.cpp  RenderGraph.hpp
engine/Renderer/: PipelineRegistry.cpp  PipelineRegistry.hpp
engine/Shader/: ShaderSystem.cpp  ShaderSystem.hpp
engine/core/: Math.hpp  env.cpp  env.hpp  log.cpp  log.hpp
engine/core/FileWatcher/: FileWatcher.cpp  FileWatcher.hpp  FileWatcherWindows.hpp
engine/gpu/: FrameContext.hpp  Pipeline.hpp  PipelineFactory.cpp  PipelineFactory.hpp  frame.cpp  frame.hpp  swapchain.cpp  swapchain.hpp  vulkan.cpp  vulkan.hpp
engine/platform/: Extent2D.hpp  Window.hpp  window.cpp  window.hpp
sandbox/: CMakeLists.txt  main.cpp
